v2/plex/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:latest
          ports:
            - name: http
              containerPort: 32400
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: plex-config
            - mountPath: /media
              name: plex-media
      restartPolicy: Always
      hostNetwork: true
      volumes:
        - name: plex-config
          persistentVolumeClaim:
            claimName: plex-pvc-config
        - name: plex-media
          persistentVolumeClaim:
            claimName: plex-pvc-media
