v2/plex/service.yml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  selector:
    app: plex
  ports:
  - port: 32400
    targetPort: 32400
