v2/plex/ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`plex.homelab.coleduclos.io`)
      services:
        - name: plex
          port: 32400
  tls:
    secretName: plex-ingressroute-certificate-secret
